--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.25.1",
+    "react-top-loading-bar": "^2.3.1",
     "redux-persist": "^6.0.0",
     "socket.io-client": "^4.7.5",
     "sonner": "^1.5.0",
